# Unigine-Legacy

./: CMakeLists.txt  CMakeUserPresets.json  Engine_1024x768fs.bat  conanfile.txt
tools/3dStudio/MeshExport/: meshexport.def  meshexport.sln  meshexport.vcproj
tools/3dStudio/SkinnedMeshExport/: skinnedmeshexport.def  skinnedmeshexport.sln  skinnedmeshexport.vcproj
win32/: Engine.sln  Engine.vcproj
